# back-end-playground

./: README.md  Resumo_Copilot_Studio.txt  commit-branch-teste.txt
Python/: FizzBuzz in python.py  abstract classes-python.py  anotaçoes aleatórias.py  class-and-instances-variables.py  class-methods_static-methods.py  condições e extras.py  constructors-destructors.py  date-datetime-time.py  encapsulamento-python.py  encapsulamento-python2.py  estrutura-repeticao-break.py  estrutura_repeticao_for.py  exibindo somente os numeros impares .py  for-with-range.py  funcoes-python.py  funcoes_entrada_saida.py  identação e funções.py  inheritance-python.py  listas-em-python.py  managing date and time.py  manipulacao-strings.py  modo interativo.py  multiple-inheritance-applied.py  polymorphism-python.py  python orientado a objetos.py  python-while.py  simple-inheritance-applied.py  teste manipulacao strings.py  timedelta-carwash.py  timezones-python.py  tipos de dados em python.py  variables-instances-classes.py  variaveis_constantes.py
Python/DESAFIOS/: DESAFIO: sistema bancario.py  DESAFIO: sistema bancario_v2.py  (+2 more)
Python/flask/flask-tutorial/: README.md  pyproject.toml  schema.sql
Python/flask/flask-tutorial/flaskr/: __init__.py
Python/flask/flask-tutorial/instance/: flaskr.sqlite
Python/flask/flask_dio/: .gitignore  pyproject.toml
Python/flask/flask_dio/migrations/versions/: 32811b8243f8_add_password_field.py  794c72384fce_initial_migration.py  f365f5847d43_initial_migration.py  ff35d2b835b2_add_active_atribute_user.py
Python/flask/flask_dio/src/: app.py
Python/flask/flask_dio/src/controllers/: auth.py  role.py  user.py
(+20 files in other folders)
