[project]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "flask",
]

[project-urls]
Homepage = "https://github.com/spork1on/back-end-playground/tree/e619bf09a58120923eb6dd331d64b4a38125e588/Python/flask/flask-tutorial"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


